# soloud

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: soloud.h  soloud_c.h
src/backend/miniaudio/: soloud_miniaudio.cpp
src/core/: soloud.cpp
tests/: test_main.cpp
